--- a/greenstart.html
+++ b/greenstart.html
@@ -42,7 +42,7 @@
           Youth of Enterprise offers young graduates a #greenstart to the career
           of their dreams
         </p>
-        <a href="http://youthofenterprise.ng/login"
+        <a href="http://youthofenterprise.solutions/register"
           ><button class="big_btn">
             <span
               class="iconify-inline"
@@ -195,7 +195,7 @@
             global counterparts.
           </div>
           <div class="btn">
-            <a href="http://youthofenterprise.ng/login"
+            <a href="http://youthofenterprise.solutions/register"
               ><button class="big_btn">
                 <span
                   class="iconify"
