--- a/member.html
+++ b/member.html
@@ -109,7 +109,7 @@
               <span
                 class="iconify-inline"
                 data-icon="bi:arrow-right-circle"
-                style="color: #40ba7b"
+                style="color: #16291f"
                 data-width="26"
                 data-height="26"
               ></span>
@@ -218,7 +218,7 @@
         </div>
 
         <div class="btn">
-          <a href="http://youthofenterprise.ng/login">
+          <a href="http://youthofenterprise.solutions/register">
             <button class="md_btn">
               <span
                 class="iconify"
