--- a/agenda.html
+++ b/agenda.html
@@ -24,7 +24,7 @@
           <li><a href="/agenda.html" class="active">Our Agenda</a></li>
           <li><a href="/member.html">Membership</a></li>
           <li><a href="/policy.html">Policy & Research</a></li>
-          <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="/yoe.html">Youth of Enterprise</a></li>
           <li><a href="/news.html">Media & Events</a></li>
           <li><a href="/contact.html">Contact Us</a></li>
         </ul>
@@ -335,7 +335,7 @@
           An annual event that brings together key Nigerian and global industry
           stakeholders and policy makers from all levels of government
         </div>
-        <a href="/greenstart.html"
+        <a href="/yoe.html"
           ><button class="md_btn">
             <span
               class="iconify"
