--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
           <li><a href="/agenda.html">Our Agenda</a></li>
           <li><a href="/member.html">Membership</a></li>
           <li><a href="/policy.html">Policy & Research</a></li>
-          <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="/yoe.html">Youth of Enterprise</a></li>
           <li><a href="/news.html">Media & Events</a></li>
           <li><a href="/contact.html" class="active">Contact Us</a></li>
         </ul>
