--- a/index.html
+++ b/index.html
@@ -17,33 +17,6 @@
 
 <body>
   <header class="header">
-    <!-- <div class="Nav-wrapper">
-      <div class="logo">
-        <a href="index.html"
-          ><img src="/images/EnterpriseNGRLogo.png" alt=""
-        /></a>
-      </div>
-      <nav>
-        <input type="checkbox" id="show-search" />
-        <input type="checkbox" id="show-menu" />
-        <label for="show-menu" class="menu-icon"
-          ><i class="fas fa-bars"></i>
-        </label>
-        <div class="content">
-          <ul class="links">
-            <li>
-              <a href="about.html">About Us </a>
-            </li>
-            <li><a href="agenda.html">Our Agenda</a></li>
-            <li><a href="member.html">Membership</a></li>
-            <li><a href="policy.html">Policy & Research</a></li>
-            <li><a href="greenstart.html">Youth Of Enterprise</a></li>
-            <li><a href="news.html">Media & Events</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </div>
-      </nav>
-    </div> -->
     <nav>
       <label class="logo"
         ><a href="index.html"
@@ -54,7 +27,7 @@
         <li><a href="/agenda.html">Our Agenda</a></li>
         <li><a href="/member.html">Membership</a></li>
         <li><a href="/policy.html">Policy & Research</a></li>
-        <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+        <li><a href="/yoe.html">Youth of Enterprise</a></li>
         <li><a href="/news.html">Media & Events</a></li>
         <li><a href="/contact.html">Contact Us</a></li>
       </ul>
@@ -223,7 +196,7 @@
       <div class="thin">
         An annual event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of governmentAn annual event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of government
       </div>
-      <a href="/greenstart.html"><button class="md_btn">
+      <a href="/yoe.html"><button class="md_btn">
         <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span><span
           class="btn_text">Learn More</span>
       </button></a>
@@ -249,7 +222,7 @@
         <div class="card_description">
           EnterpriseNGR’s Internship programme aimed at empowering the next generation of workplace talent.
         </div>
-        <a href="/greenstart.html"><button class="md_btn">
+        <a href="/yoe.html"><button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
             data-width="26"></span><span class="btn_text">Read More</span>
         </button></a>
