--- a/yoe.html
+++ b/yoe.html
@@ -25,7 +25,7 @@
           <li><a href="/member.html">Membership</a></li>
           <li><a href="/policy.html">Policy & Research</a></li>
           <li>
-            <a href="/greenstart.html" class="active">Youth of Enterprise</a>
+            <a href="/yoe.html" class="active">Youth of Enterprise</a>
           </li>
           <li><a href="/news.html">Media & Events</a></li>
           <li><a href="/contact.html">Contact Us</a></li>
@@ -116,7 +116,7 @@
           </ul>
         </div>
         <div class="btn">
-          <a href="http://youthofenterprise.ng/login"
+          <a href="https://youthofenterprise.solutions/register"
             ><button class="big_btn">
               <span
                 class="iconify-inline"
@@ -444,7 +444,7 @@
               industry stakeholders and policy makers from all levels of
               government.
             </div>
-            <a href="/greenstart.html"
+            <a href="/yoe.html"
               ><button class="md_btn">
                 <span
                   class="iconify"
