--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
         <div class="form">
           <div class="md_heading">Get In Touch</div>
           <form
-            action="https://formsubmit.co/danielochoja@gmail.com"
+            action="https://formsubmit.co/contactus@enterprisengr.com"
             method="POST"
           >
             <div>
@@ -152,6 +152,7 @@
               name="_next"
               value="http://enterprisengr.online/contact.html"
             />
+            <input type="hidden" name="_captcha" value="false" />
             <div class="btn">
               <button>Submit</button>
             </div>
